gitops/clusters/homelab/apps/public/personal-web-page/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: personal-web-page-http
  namespace: public
spec:
  entryPoints:
    - public-web
  routes:
    - match: Host(`pavel-usanli.online`)
      kind: Rule
      services:
        - name: personal-web-page
          port: 80
